@@ -12,3 +12,9 @@ version 2.9.0:
 	* MusicXML import - fill with hidden rests in second staff as well. R299
 	* Selection button and note buttons splitted. First step towards separate Insert/Edit/Selection modes. R300
 	* Don't select the next element when using Backspace to delete and the beginning of the score is reached. R301
+	* New keyboard binding ESC - leaves current mode. Changed many keyboard bindings:
+		- End -> E: Edit mode
+		- Alt-Right, Alt-Left -> Home, End: Move at the beginning of the document, move at the end of document
+		- Insert -> SHIFT+Return: Insert rest
+		- CTRL+Backspace -> CTRL+Delete: Delete a note in chord
+		- E -> SHIFT+E: Pitch E
